Update tasks/git/src/main/java/com/walmartlabs/concord/plugins/git/GitHubTask.java
Co-authored-by: Ivan Bodrov <ibodrov@gmail.com>